--- a/src/TP2.ipynb
+++ b/src/TP2.ipynb
@@ -27,18 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 1.9.6\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !pip install pygame\n",
     "# !pip install PyOpenGL\n",
@@ -62,7 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aplication archives\n",
+    "\n",
+    "TARGET = './media/alvo.jpg'\n",
+    "OBJECT = './media/Pikachu.obj'\n",
+    "VIDEO_INPUT = './media/tp2-icv-input.mp4'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +101,7 @@
     "\n",
     "    glMatrixMode(GL_MODELVIEW)\n",
     "\n",
-    "    obj = OBJ(\"Pikachu.obj\", swapyz=True)\n",
+    "    obj = OBJ(OBJECT, swapyz=True)\n",
     "    #print('ok3')\n",
     "    glEnable(GL_TEXTURE_2D)\n",
     "\n",
@@ -108,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +131,7 @@
     "\n",
     "    ##opencv coordinate system to opengl coordinate system\n",
     "    flip_y_and_z_axis = np.array([[1, 0,  0, 0],\n",
-    "                                  [0, 1,  0, 0],\n",
+    "                                  [0, -1,  0, 0],\n",
     "                                  [0, 0, -1, 0],\n",
     "                                  [0, 0,  0, 1]])\n",
     "    m = np.dot(flip_y_and_z_axis, m)\n",
@@ -141,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +171,8 @@
     "    :param img: frame a ser processado\n",
     "    :return: lista dos alvos encontrados\n",
     "    \"\"\"\n",
-    "    alvo = cv2.imread('alvo.jpg')\n",
+    "    \n",
+    "    alvo = cv2.imread(TARGET)\n",
     "    alvo = cv2.cvtColor(alvo, cv2.COLOR_BGR2GRAY)\n",
     "    ret, binaryAlvo = cv2.threshold(alvo, 127, 255, cv2.THRESH_BINARY+cv2.THRESH_OTSU)\n",
     "\n",
@@ -231,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +244,7 @@
     "    \"\"\"\n",
     "    Callback do glut.\n",
     "    \"\"\"\n",
+    "    \n",
     "    glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT)\n",
     "    glLoadIdentity()\n",
     "\n",
@@ -302,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,21 +316,15 @@
     "    \"\"\"\n",
     "    Callback do glut\n",
     "    \"\"\"\n",
+    "    \n",
     "    glutPostRedisplay()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error opening video stream or file\n"
-     ]
-    },
     {
      "ename": "NullFunctionError",
      "evalue": "Attempt to call an undefined function glutSetOption, check for bool(glutSetOption) before calling",
@@ -332,7 +332,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNullFunctionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-1c193cb882fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mglutInit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mglutInitDisplayMode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGLUT_RGBA\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0mGLUT_DOUBLE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mglutSetOption\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGLUT_ACTION_ON_WINDOW_CLOSE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGLUT_ACTION_CONTINUE_EXECUTION\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0mglutInitWindowSize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdimensions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mwindow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglutCreateWindow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mb'Realidade Aumentada'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-31-178eda2d7981>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mglutInit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mglutInitDisplayMode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGLUT_RGBA\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0mGLUT_DOUBLE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mglutSetOption\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGLUT_ACTION_ON_WINDOW_CLOSE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGLUT_ACTION_CONTINUE_EXECUTION\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0mglutInitWindowSize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdimensions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mwindow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglutCreateWindow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mb'Realidade Aumentada'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/OpenGL/platform/baseplatform.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **named)\u001b[0m\n\u001b[1;32m    405\u001b[0m             raise error.NullFunctionError(\n\u001b[1;32m    406\u001b[0m                 \"\"\"Attempt to call an undefined function %s, check for bool(%s) before calling\"\"\"%(\n\u001b[0;32m--> 407\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    408\u001b[0m                 )\n\u001b[1;32m    409\u001b[0m             )\n",
       "\u001b[0;31mNullFunctionError\u001b[0m: Attempt to call an undefined function glutSetOption, check for bool(glutSetOption) before calling"
      ]
@@ -341,14 +341,15 @@
    "source": [
     "if __name__ == '__main__':\n",
     "\n",
-    "    ##intrinsicDict = readYAMLFile(\"instrinsic.vml\")\n",
-    "    cameraMatrix = np.array([[1232.95030, 0., 932.47503],\n",
-    "                             [0, 1225.84345, 505.11582], [0., 0., 1.]])##intrinsicDict[\"c...?\"]\n",
-    "    distCoeffs = np.array([1.3, 7.7, 0., 0., 1.5])#intrinsicDict['distortion_coefficients']\n",
+    "    # intrinsicDict = readYAMLFile(\"instrinsic.vml\")\n",
     "    \n",
-    "    dimensions = (640, 480)#(intrinsicDict['image_width'], intrinsicDict['image_hight'])\n",
+    "    cameraMatrix = np.array([[1232.95030, 0., 932.47503],\n",
+    "                             [0, 1225.84345, 505.11582], [0., 0., 1.]]) # intrinsicDict[\"c...?\"]\n",
+    "    distCoeffs = np.array([1.3, 7.7, 0., 0., 1.5]) # intrinsicDict['distortion_coefficients']\n",
+    "    \n",
+    "    dimensions = (640, 480) # (intrinsicDict['image_width'], intrinsicDict['image_hight'])\n",
     "\n",
-    "    cap = cv2.VideoCapture('tp2-icv-input.mp4')\n",
+    "    cap = cv2.VideoCapture(VIDEO_INPUT)\n",
     "\n",
     "    if (cap.isOpened() == False):\n",
     "        print(\"Error opening video stream or file\")\n",
