Tentativas de correcoes de bug

--- a/src/TP2.ipynb
+++ b/src/TP2.ipynb
@@ -27,14 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# !pip install pygame\n",
     "# !pip install PyOpenGL\n",
-    "# !pip install opencv-python\n",
-    "\n",
+    "# !pip install opencv-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# -*- coding: utf-8 -*-\n",
     "\n",
     "import cv2\n",
@@ -53,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +339,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNullFunctionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-178eda2d7981>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mglutInit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mglutInitDisplayMode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGLUT_RGBA\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0mGLUT_DOUBLE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mglutSetOption\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGLUT_ACTION_ON_WINDOW_CLOSE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGLUT_ACTION_CONTINUE_EXECUTION\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0mglutInitWindowSize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdimensions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mwindow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglutCreateWindow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mb'Realidade Aumentada'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-45-ab8fdfa92896>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mglutInit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mglutInitDisplayMode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGLUT_RGBA\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0mGLUT_DOUBLE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0mglutSetOption\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGLUT_ACTION_ON_WINDOW_CLOSE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGLUT_ACTION_CONTINUE_EXECUTION\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0mglutInitWindowSize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdimensions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mwindow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglutCreateWindow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mb'Realidade Aumentada'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/OpenGL/platform/baseplatform.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **named)\u001b[0m\n\u001b[1;32m    405\u001b[0m             raise error.NullFunctionError(\n\u001b[1;32m    406\u001b[0m                 \"\"\"Attempt to call an undefined function %s, check for bool(%s) before calling\"\"\"%(\n\u001b[0;32m--> 407\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    408\u001b[0m                 )\n\u001b[1;32m    409\u001b[0m             )\n",
       "\u001b[0;31mNullFunctionError\u001b[0m: Attempt to call an undefined function glutSetOption, check for bool(glutSetOption) before calling"
      ]
@@ -343,11 +350,15 @@
     "\n",
     "    # intrinsicDict = readYAMLFile(\"instrinsic.vml\")\n",
     "    \n",
+    "    # intrinsicDict[\"c...?\"]\n",
     "    cameraMatrix = np.array([[1232.95030, 0., 932.47503],\n",
-    "                             [0, 1225.84345, 505.11582], [0., 0., 1.]]) # intrinsicDict[\"c...?\"]\n",
-    "    distCoeffs = np.array([1.3, 7.7, 0., 0., 1.5]) # intrinsicDict['distortion_coefficients']\n",
+    "                             [0, 1225.84345, 505.11582], [0., 0., 1.]])\n",
     "    \n",
-    "    dimensions = (640, 480) # (intrinsicDict['image_width'], intrinsicDict['image_hight'])\n",
+    "    # intrinsicDict['distortion_coefficients']\n",
+    "    distCoeffs = np.array([1.3, 7.7, 0., 0., 1.5])\n",
+    "    \n",
+    "    # (intrinsicDict['image_width'], intrinsicDict['image_hight'])\n",
+    "    dimensions = (640, 480)\n",
     "\n",
     "    cap = cv2.VideoCapture(VIDEO_INPUT)\n",
     "\n",
