Adding some bug corretions

--- a/src/TP2.ipynb
+++ b/src/TP2.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,28 +52,26 @@
     "\n",
     "from PIL import Image\n",
     "\n",
-    "#from opencvYAMLLoading import * \n",
-    "\n",
     "from objloader import *\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Aplication archives\n",
     "\n",
     "TARGET = './media/alvo.jpg'\n",
-    "OBJECT = './media/Pikachu.obj'\n",
+    "OBJECT = './Pikachu.obj'\n",
     "VIDEO_INPUT = './media/tp2-icv-input.mp4'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def object3D(rect, indices, cameraMatrix, distCoeffs, obj):\n",
     "    \n",
     "    imagePoints = np.array(rect, dtype=\"float32\")\n",
-    "    objectPoints = np.array([[-1, 1, 1], [ 1, -1, 1],\n",
+    "    objectPoints = np.array([[-1, -1, 1], [ 1, -1, 1],\n",
     "                             [ 1, 1, 1], [-1, 1, 1]], dtype=\"float32\")\n",
     "    _, rvecs, tvecs = cv2.solvePnP(objectPoints[indices], imagePoints, cameraMatrix, distCoeffs)\n",
     "    rotm = cv2.Rodrigues(rvecs)[0]\n",
@@ -146,13 +144,13 @@
     "    m = np.transpose(m)\n",
     "    glLoadMatrixd(m)\n",
     "\n",
-    "    ##glutSolidCube(2.0)\n",
+    "    glutSolidCube(2.0)\n",
     "    glCallList(obj.gl_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,16 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def findMarkers(img):\n",
-    "    \"\"\"\n",
-    "    Encontra os alvos no frame atual.\n",
-    "    :param img: frame a ser processado\n",
-    "    :return: lista dos alvos encontrados\n",
-    "    \"\"\"\n",
+    "    # Find the targets in the current frame\n",
+    "    # INPUT: frame to be analysed\n",
+    "    # OUTPUT: list of targets founded\n",
     "    \n",
     "    alvo = cv2.imread(TARGET)\n",
     "    alvo = cv2.cvtColor(alvo, cv2.COLOR_BGR2GRAY)\n",
@@ -188,7 +184,7 @@
     "    markers = []\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "    ##gray = cv2.GaussianBlur(gray, (5.5), 0)\n",
+    "    # gray = cv2.GaussianBlur(gray, (5.5), 0)\n",
     "    edged = cv2.Canny(gray, 50, 150)\n",
     "    cnt, _ = cv2.findContours(edged, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)[-2:]\n",
     "\n",
@@ -217,11 +213,14 @@
     "                cv2.imshow('debug1', img)\n",
     "\n",
     "                ret, binaryImg = cv2.threshold(warped, 127, 255, cv2.THRESH_BINARY+cv2.THRESH_OTSU)\n",
-    "                ##cv2.imshow('debug2', binaryImg)\n",
-    "                ##cv2.waitKey(+)\n",
+    "                # cv2.imshow('debug2', binaryImg)\n",
+    "                # cv2.waitKey(+)\n",
+    "                \n",
+    "                #binaryImg = cv2.resize(binaryImg, (200,200), interpolation=INTER_AREA)\n",
+    "                #binaryAlvo = cv2.resize(binaryAlvo, (200,200), interpolation=INTER_AREA)\n",
     "\n",
-    "                ##dist = correlation_coefficient(binaryImg, binaryAlvo)\n",
-    "                #dist = np.sqrt(np.sum(np.square(binaryImg, binaryAlvo)))\n",
+    "                dist = correlation_coefficient(binaryImg, binaryAlvo)\n",
+    "                dist = np.sqrt(np.sum(np.square(binaryImg, binaryAlvo)))\n",
     "                shape = binaryImg.shape\n",
     "                dist = np.sqrt(np.sum(np.square(binaryImg, binaryAlvo[:shape[0],:shape[1]])))\n",
     "\n",
@@ -232,7 +231,7 @@
     "                    c_cords = src\n",
     "\n",
     "                indices = np.roll(indices, -1)\n",
-    "                ##print dist\n",
+    "                # print(dist)\n",
     "\n",
     "            if c_cords is not None:\n",
     "                markers.append((c_cords, c_indices))\n",
@@ -243,14 +242,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def displayCallback():\n",
-    "    \"\"\"\n",
-    "    Callback do glut.\n",
-    "    \"\"\"\n",
+    "    # Callback do GLUT\n",
     "    \n",
     "    glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT)\n",
     "    glLoadIdentity()\n",
@@ -315,50 +312,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def idleCallback():\n",
-    "    \"\"\"\n",
-    "    Callback do glut\n",
-    "    \"\"\"\n",
+    "    # Callback do GLUT\n",
     "    \n",
     "    glutPostRedisplay()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NullFunctionError",
-     "evalue": "Attempt to call an undefined function glutSetOption, check for bool(glutSetOption) before calling",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNullFunctionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-ab8fdfa92896>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mglutInit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mglutInitDisplayMode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGLUT_RGBA\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0mGLUT_DOUBLE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0mglutSetOption\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGLUT_ACTION_ON_WINDOW_CLOSE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGLUT_ACTION_CONTINUE_EXECUTION\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0mglutInitWindowSize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdimensions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mwindow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglutCreateWindow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mb'Realidade Aumentada'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/OpenGL/platform/baseplatform.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **named)\u001b[0m\n\u001b[1;32m    405\u001b[0m             raise error.NullFunctionError(\n\u001b[1;32m    406\u001b[0m                 \"\"\"Attempt to call an undefined function %s, check for bool(%s) before calling\"\"\"%(\n\u001b[0;32m--> 407\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    408\u001b[0m                 )\n\u001b[1;32m    409\u001b[0m             )\n",
-      "\u001b[0;31mNullFunctionError\u001b[0m: Attempt to call an undefined function glutSetOption, check for bool(glutSetOption) before calling"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
-    "\n",
-    "    # intrinsicDict = readYAMLFile(\"instrinsic.vml\")\n",
+    "    '''\n",
+    "    Camera matrix:\n",
+    "    [[fX  s  x0]\n",
+    "     [ 0  fY y0]\n",
+    "     [ 0  0   1]]\n",
+    "    '''\n",
+    "    cameraMatrix = np.array([[610.879708372179834, 0., 147.535469452871865],\n",
+    "                             [0, 567.989563803793203, 378.898762622333265],\n",
+    "                             [0., 0., 1.]])\n",
     "    \n",
-    "    # intrinsicDict[\"c...?\"]\n",
-    "    cameraMatrix = np.array([[1232.95030, 0., 932.47503],\n",
-    "                             [0, 1225.84345, 505.11582], [0., 0., 1.]])\n",
+    "    '''\n",
+    "    Distortion coefficients\n",
+    "    '''\n",
+    "    distCoeffs = np.array([0.221906437598475, -0.144942670158401, 0.071131863616536, -0.034706440480340, 0.])\n",
     "    \n",
-    "    # intrinsicDict['distortion_coefficients']\n",
-    "    distCoeffs = np.array([1.3, 7.7, 0., 0., 1.5])\n",
-    "    \n",
-    "    # (intrinsicDict['image_width'], intrinsicDict['image_hight'])\n",
-    "    dimensions = (640, 480)\n",
+    "    '''\n",
+    "    Image size (width, hight):\n",
+    "    '''\n",
+    "    dimensions = (578, 434)\n",
     "\n",
     "    cap = cv2.VideoCapture(VIDEO_INPUT)\n",
     "\n",
@@ -387,13 +376,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('base': conda)",
+   "display_name": "Python (python35)",
    "language": "python",
-   "name": "python37464bitbasecondabb5af891ef1044d7be15a697e9ceaf9c"
+   "name": "python35"
   },
   "language_info": {
    "codemirror_mode": {
@@ -405,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
